testsuite/tests/properties/can_reach/invalid/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example(@Example)
}

class Example: FooNode implements TokenNode {
}
